Clean up unused codes and dependencies (#2778)
The PR is clean up unused docs script, unused GithubNameResolver class and unused kusto dependencies.

Passed the pipeline. Search the deleted one in tool and lang repo. No usage based on the search

--- a/tools/notification-configuration/github-codeowner-subscriber/Azure.Sdk.Tools.GithubCodeownerSubscriber.csproj
+++ b/tools/notification-configuration/github-codeowner-subscriber/Azure.Sdk.Tools.GithubCodeownerSubscriber.csproj
@@ -15,7 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\code-owners-parser\CodeOwnersParser\Azure.Sdk.Tools.CodeOwnersParser.csproj" />
-    <ProjectReference Include="..\..\identity-resolution\identity-resolution\identity-resolution.csproj" />
+    <ProjectReference Include="..\..\identity-resolution\identity-resolution.csproj" />
   </ItemGroup>
 
 </Project>
