--- a/eng/pipelines/notifications.yml
+++ b/eng/pipelines/notifications.yml
@@ -77,13 +77,17 @@ stages:
             --organization $(Organization) `
             --project $(Project) `
             --path-prefix "\$(PathPrefix)" `
-            --dev-ops-token-var $(azure-sdk-notification-tools-pat) `
-            --aad-app-id-var $(opensource-aad-app-id) `
-            --aad-app-secret-var $(opensource-aad-secret) `
-            --aad-tenant-var $(opensource-aad-tenant-id) `
+            --dev-ops-token-var DEVOPS_TOKEN `
+            --aad-app-id-var OPENSOURCE_AAD_APP_ID `
+            --aad-app-secret-var OPENSOURCE_AAD_APP_SECRET `
+            --aad-tenant-var OPENSOURCE_AAD_TENANT_ID `
             $(AdditionalParameters)
         displayName: 'Run GitHub CODEOWNER Subscriber'
         env:
           DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
           DOTNET_CLI_TELEMETRY_OPTOUT: 1
           DOTNET_MULTILEVEL_LOOKUP: 0
+          DEVOPS_TOKEN: $(azure-sdk-notification-tools-pat)
+          OPENSOURCE_AAD_APP_ID: $(opensource-aad-app-id)
+          OPENSOURCE_AAD_APP_SECRET: $(opensource-aad-secret)
+          OPENSOURCE_AAD_TENANT_ID: $(opensource-aad-tenant-id)
