Fix wrong generation for output variable with chain invoke (#2874)
* fix: output variable with chain invoke

* build: release @autorest/gotest_v2.1.4

* chore: update test snapshot

--- a/tools/sdk-testgen/packages/autorest.gotest/test/integrationtest/output/appplatform/test/__debug/go-tester.yaml
+++ b/tools/sdk-testgen/packages/autorest.gotest/test/integrationtest/output/appplatform/test/__debug/go-tester.yaml
@@ -41311,11 +41311,11 @@ testModel:
               outputVariablesModel:
                 relativePath:
                   - type: object
-                    languageName: RelativePath
+                    languageName: .RelativePath
                     languages: *ref_1309
                 uploadUrl:
                   - type: object
-                    languageName: UploadURL
+                    languageName: .UploadURL
                     languages: *ref_1310
               requestParameters:
                 api-version: 2020-11-01-preview
