--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -25,4 +25,4 @@
 /tools/stress-cluster/           @benbp @ckairen
 /tools/mock-service-host/        @changlong-liu @tadelesh
 /tools/sdk-testgen/              @changlong-liu @tadelesh
-/tools/js-sdk-release-tools/     @weidong @qiaozha @MaryGao
+/tools/js-sdk-release-tools/     @dw511214992 @qiaozha @MaryGao
